...
  NSString *alertTitle =NSLocalizedStringFromTableInBundle(@"removeBindingAlertTitle", nil, _languageBundle, nil);
  NSString *alertDescription =NSLocalizedStringFromTableInBundle(@"removeBindingAlertDescription", nil, _languageBundle, nil);
  UIAlertController* alert = [UIAlertController alertControllerWithTitle:alertTitle
                                 message:alertDescription
                                 preferredStyle:UIAlertControllerStyleAlert];
   
  UIAlertAction* defaultAction = [UIAlertAction actionWithTitle:@"Delete" style:UIAlertActionStyleDefault
     handler:^(UIAlertAction * action) {
    
    [self _removeBindingByIndexPath: indexPath];
  }];
  
  UIAlertAction* cancelAction = [UIAlertAction actionWithTitle:@"Cancel" style:UIAlertActionStyleDefault
...
